# VTOL

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_bridge_cpp/lib/custom_bridge_cpp/: custom_bridge
install/custom_bridge_cpp/share/ament_index/resource_index/package_run_dependencies/: custom_bridge_cpp
install/custom_bridge_cpp/share/custom_bridge_cpp/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_bridge_cpp/share/custom_bridge_cpp/cmake/: custom_bridge_cppConfig.cmake
install/custom_vtol_plugin/include/custom_vtol_plugin/custom_vtol_plugin/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/custom_vtol_plugin/include/custom_vtol_plugin/custom_vtol_plugin/msg/detail/: motor_commands__struct.hpp  motor_commands__type_support.c
install/custom_vtol_plugin/lib/custom_vtol_plugin/: hover_control.py  hover_publisher.py
install/custom_vtol_plugin/local/lib/python3.10/dist-packages/custom_vtol_plugin/: _custom_vtol_plugin_s.ep.rosidl_typesupport_introspection_c.c
install/custom_vtol_plugin/local/lib/python3.10/dist-packages/custom_vtol_plugin-0.0.1-py3.10.egg-info/: SOURCES.txt
install/custom_vtol_plugin/share/ament_index/resource_index/rosidl_interfaces/: custom_vtol_plugin
install/custom_vtol_plugin/share/custom_vtol_plugin/: local_setup.sh  package.dsv  package.sh  package.xml
install/custom_vtol_plugin/share/custom_vtol_plugin/cmake/: ament_cmake_export_libraries-extras.cmake  custom_vtol_plugin__rosidl_typesupport_cExport.cmake  export_custom_vtol_plugin__rosidl_generator_cExport.cmake  export_custom_vtol_plugin__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_vtol_plugin/share/custom_vtol_plugin/msg/: MotorCommands.idl  MotorCommands.msg
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/px4_ros_com/: package.sh
log/: latest_build
src/custom_bridge_cpp/: CMakeLists.txt  package.xml
src/custom_bridge_cpp/src/: custom_bridge.cpp
src/custom_vtol_plugin/: CMakeLists.txt
src/custom_vtol_plugin/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/custom_vtol_plugin/install/custom_vtol_plugin/include/custom_vtol_plugin/custom_vtol_plugin/msg/detail/: motor_commands__builder.hpp  motor_commands__functions.h  motor_commands__rosidl_typesupport_introspection_cpp.hpp  motor_commands__struct.h  motor_commands__traits.hpp  motor_commands__type_support.c  motor_commands__type_support.h
src/custom_vtol_plugin/install/custom_vtol_plugin/lib/custom_vtol_plugin/: hover_publisher.py
src/custom_vtol_plugin/install/custom_vtol_plugin/local/lib/python3.10/dist-packages/custom_vtol_plugin/: _custom_vtol_plugin_s.ep.rosidl_typesupport_c.c  _custom_vtol_plugin_s.ep.rosidl_typesupport_fastrtps_c.c
src/custom_vtol_plugin/install/custom_vtol_plugin/local/lib/python3.10/dist-packages/custom_vtol_plugin-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/custom_vtol_plugin/install/custom_vtol_plugin/share/ament_index/resource_index/package_run_dependencies/: custom_vtol_plugin
src/custom_vtol_plugin/install/custom_vtol_plugin/share/custom_vtol_plugin/: local_setup.sh  package.bash  package.ps1  package.sh  package.zsh
src/custom_vtol_plugin/install/custom_vtol_plugin/share/custom_vtol_plugin/cmake/: custom_vtol_pluginConfig.cmake  custom_vtol_plugin__rosidl_typesupport_cppExport.cmake  export_custom_vtol_plugin__rosidl_generator_cppExport.cmake  export_custom_vtol_plugin__rosidl_generator_pyExport-noconfig.cmake  export_custom_vtol_plugin__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_custom_vtol_plugin__rosidl_typesupport_fastrtps_cppExport.cmake
src/custom_vtol_plugin/log/: latest_build
src/custom_vtol_plugin/scripts/: __init__.py  custom_bridge.py  hover_control.py
src/custom_vtol_plugin/src/: motor_controller_plugin.cpp
ws_ros2/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ws_ros2/install/custom_vtol_plugin/share/custom_vtol_plugin/: package.bash  package.zsh
ws_ros2/log/: latest_build
ws_ros2/src/: custom_bridge_cpp
ws_ros2/src/custom_vtol_plugin/: CMakeLists.txt  custom_vtol_plugin  package.xml
ws_ros2/src/custom_vtol_plugin/patch/: ignition-gazebo6-config.cmake
ws_ros2/src/custom_vtol_plugin/src/: motor_controller_plugin.cpp
