<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_vtol_plugin</name>
  <version>0.0.0</version>
  <description>Custom VTOL Gazebo Plugin using ROS 2</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO</license>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>

  <!-- Build tool dependencies (required for messages) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Gazebo dependency (for Model.hh) -->
  <depend>gazebo</depend>

  <!-- Exporting the shared library plugin -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin="${prefix}/lib/libmotor_controller_plugin.so"/>
  </export>
</package>